--- a/src/app/components/timer-display/timer-display.html
+++ b/src/app/components/timer-display/timer-display.html
@@ -1,1 +1,4 @@
-<p>timer-display works!</p>
+<div class="timer-display">
+  <h2>{{mode() | titlecase}}</h2>
+  <h1>{{minutes()}}:{{seconds()}}</h1>
+</div>
