--- a/src/app/components/timer-container/timer-container.html
+++ b/src/app/components/timer-container/timer-container.html
@@ -1,4 +1,6 @@
-<p>timer-container works!</p>
-<app-timer-settings></app-timer-settings>
-<app-timer-display></app-timer-display>
-<app-timer-controls></app-timer-controls>
+<div class="timer-container">
+  <h1 class="title">Pomodoro Clock</h1>
+  <app-timer-settings></app-timer-settings>
+  <app-timer-display></app-timer-display>
+  <app-timer-controls></app-timer-controls>
+</div>
